<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5f5f5">

    <include layout="@layout/common_toolbar"
        android:id="@+id/toolbar"/>

    <ScrollView
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/size_16dp">

            <TextView
                android:id="@+id/merchant_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/label_text_color"
                android:textSize="@dimen/size_14sp"
                android:text="@string/merchant_label"
                android:layout_marginTop="@dimen/size_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"/>

            <EditText
                android:id="@+id/merchant_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_dark"
                android:textSize="@dimen/size_17sp"
                android:layout_marginTop="@dimen/size_12dp"
                android:background="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/merchant_label"/>

            <include layout="@layout/horizontal_line_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/merchant_name"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/expense_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/label_text_color"
                android:textSize="@dimen/size_14sp"
                android:text="@string/expense_date_label"
                android:layout_marginTop="@dimen/size_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/merchant_name"/>

            <TextView
                android:id="@+id/expense_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_dark"
                android:textSize="@dimen/size_17sp"
                tools:text="1996-01-19"
                android:layout_marginTop="@dimen/size_12dp"
                app:layout_constraintTop_toBottomOf="@id/expense_date_label"
                app:layout_constraintStart_toStartOf="parent"/>

            <include layout="@layout/horizontal_line_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/expense_date"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/expense_amount_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/label_text_color"
                android:textSize="@dimen/size_14sp"
                android:text="@string/amount_label"
                android:layout_marginTop="@dimen/size_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/expense_date"/>

            <EditText
                android:id="@+id/expense_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_12dp"
                android:hint="@string/amount_hint"
                android:textSize="@dimen/size_17sp"
                android:textColor="@color/text_color_dark"
                android:inputType="numberDecimal|numberSigned"
                android:background="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/expense_amount_label"/>

            <include layout="@layout/horizontal_line_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/expense_amount"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

    <ProgressBar
        style="?android:progressBarStyleLarge"
        android:id="@+id/loading_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"/>

</LinearLayout>